tests/baselines/reference/extendsUntypedModule.types
=== /a.ts ===
import Foo from "foo";
>Foo : any
>类型别名 :=> 任意

import Bar from "bar"; // error: unused
>Bar : any
>类型别名 :=> 任意

export class A extends Foo { }
>A : A
>Foo : any
>类型别名 :=> 任意

